[MultipleGap] Fixed problem with hiding the addon under other addons

--- a/addons/multiplegap/src/style.css
+++ b/addons/multiplegap/src/style.css
@@ -18,7 +18,6 @@
     width: 100%;
     height: 100%;
     position: absolute;
-    z-index: 1000;
     cursor: pointer;
     top: 0;
     left: 0;
